feat: create basic API for user authentication
