# server/models/databasePool.js
@@ -1,13 +1,15 @@
-import { Pool } from 'pg';
+import pg from 'pg';
 import dotenv from 'dotenv';
 
+const { Pool } = pg;
 dotenv.config();
 
 const pool = new Pool({
   host: process.env.POSTGRESQL_HOST,
   user: process.env.POSTGRESQL_USER,
   database: process.env.POSTGRESQL_DATABASE,
-  port: process.env.POSTGRESQL_PORT,
+  password: process.env.POSTGRESQL_PASSWORD,
+  port: parseInt(process.env.POSTGRESQL_PORT, 10),
   max: 20,
   idleTimeoutMillis: 30000,
   connectionTimeoutMillis: 2000,
